deploy/istio/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: virtengine
  labels:
    istio-injection: enabled
