deploy/istio/base/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: virtengine
spec:
  mtls:
    mode: STRICT
